--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -2,24 +2,13 @@ name: Hello World
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
   workflow_dispatch:
 jobs:
   say-hello:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Run a one-line script
-        run: echo Hello, world!
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
-          ls -l
+        - run: echo Hello, world!
   print-env:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Print Environment context
-        run: env | sort
+        - run: env | sort
