--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -8,6 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
         - run: echo Hello, world!
+        - run: date
   print-env:
     runs-on: ubuntu-latest
     steps:
