--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -13,3 +13,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
         - run: env | sort
+  setup-java:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup Java JDK
+        uses: actions/setup-java@v5.0.0
+        with:
+          java-version: 21
+          distribution: adopt
+          
